Binder setup fix

--- a/HCML_2019/bLIMEy.ipynb
+++ b/HCML_2019/bLIMEy.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![new BSD](https://img.shields.io/github/license/So-Cool/bLIMEy.svg)](https://github.com/So-Cool/bLIMEy/blob/master/LICENCE)\n",
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/So-Cool/bLIMEy/master?filepath=HCML_2019)\n",
     "\n",
     "# bLIMEy: Surrogate Prediction Explanations Beyond LIME #\n",
@@ -11,12 +12,14 @@
     "This directory contains a Jupyter Notebook that can be used to reproduce the\n",
     "results included in the Appendix of the\n",
     "\"*bLIMEy: Surrogate Prediction Explanations Beyond LIME*\" paper published at\n",
-    "the *2019 Workshop on Human-Centric Machine Learning*\n",
-    "([HCML 2019](https://sites.google.com/view/hcml-2019)) held during the\n",
-    "33rd Conference on Neural Information Processing Systems (NeurIPS 2019),\n",
+    "the *2019 Workshop on Human-Centric Machine Learning* ([HCML 2019]) held during\n",
+    "the 33rd Conference on Neural Information Processing Systems (NeurIPS 2019),\n",
     "Vancouver, Canada.\n",
     "\n",
-    "The manuscript is available on [arXiv](https://arxiv.org/abs/1910.13016).\n",
+    "The manuscript is available on [arXiv].\n",
+    "\n",
+    "A related *how-to* guide illustrating how to build custom surrogates for\n",
+    "tabular data is [a part of the FAT Forensics documentation].\n",
     "\n",
     "To run the notebook (`bLIMEy.ipynb`) you need to install\n",
     "`fat-forensics>=0.0.2`, `matplotlib` and `scikit-learn`. Additionally, the\n",
@@ -56,7 +59,11 @@
     "  url={https://arxiv.org/abs/1910.13016},\n",
     "  year={2019}\n",
     "}\n",
-    "```"
+    "```\n",
+    "\n",
+    "[HCML 2019]: https://sites.google.com/view/hcml-2019\n",
+    "[arXiv]: https://arxiv.org/abs/1910.13016\n",
+    "[a part of the FAT Forensics documentation]: https://fat-forensics.org/how_to/transparency/tabular-surrogates.html"
    ]
   },
   {
