--- a/DAMI_2021/exploration_image.ipynb
+++ b/DAMI_2021/exploration_image.ipynb
@@ -33,6 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "import fatf\n",
     "\n",
     "import fatf.utils.data.segmentation as fatf_segmentation\n",
