--- a/DAMI_2021/exploration_tabular.ipynb
+++ b/DAMI_2021/exploration_tabular.ipynb
@@ -22,6 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "import fatf\n",
     "import sklearn.preprocessing\n",
     "import sklearn.datasets\n",
