--- a/HCML_2019/bLIMEy.ipynb
+++ b/HCML_2019/bLIMEy.ipynb
@@ -152,6 +152,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "%load_ext watermark\n",
     "%watermark -v -p scipy,numpy,sklearn,matplotlib,fatf"
    ]
