Ignore figures when testing

--- a/DAMI_2021/experiments_image.ipynb
+++ b/DAMI_2021/experiments_image.ipynb
@@ -133,6 +133,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "plt.style.use('seaborn')\n",
     "fig = plt.figure()\n",
     "\n",
