--- a/DAMI_2021/experiments_tabular.ipynb
+++ b/DAMI_2021/experiments_tabular.ipynb
@@ -230,6 +230,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "fig = plt.figure(figsize=(10, 4))  # constrained_layout=True\n",
     "\n",
     "keys = sorted(list(tree_local.keys()))\n",
