--- a/DAMI_2021/exploration_image.ipynb
+++ b/DAMI_2021/exploration_image.ipynb
@@ -700,6 +700,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "# fontsize=14 # labelsize=16\n",
     "# xlim = (-0.001, 0.017) # xlim = (-0.01, 0.76)\n",
     "plot_bar_exp(mock_explanation, savepath='_figures/husky_bar.pdf', onesided=True)"
@@ -740,6 +741,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "# fontsize=14 # labelsize=16\n",
     "# xlim = (-0.001, 0.017) # xlim = (-0.01, 0.76)\n",
     "plot_bar_exp(\n",
