--- a/DAMI_2021/exploration_tabular.ipynb
+++ b/DAMI_2021/exploration_tabular.ipynb
@@ -216,6 +216,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "plt.figure(figsize=(6, 4))\n",
     "\n",
     "plt.scatter(X[:, 0], X[:, 1], c=y, s=360)\n",
@@ -259,6 +260,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "fig = plt.figure()  # figsize=(6, 4) # (7, 4)\n",
     "ax = fig.add_axes((0, 0, 1, 1))\n",
     "\n",
@@ -366,6 +368,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "plt.figure(figsize=(6, 4))\n",
     "\n",
     "plt.scatter(X[:, 0], X[:, 1], c=y, s=360)\n",
@@ -410,6 +413,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "fig = plt.figure()  # figsize=(6, 4) # (7, 4)\n",
     "ax = fig.add_axes((0, 0, 1, 1))\n",
     "\n",
@@ -557,6 +561,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "ANNOTATION_SUBSCRIPT = False\n",
     "\n",
     "fig = plt.figure()  # figsize=(4, 4)\n",
@@ -685,6 +690,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "ANNOTATION_SUBSCRIPT = False\n",
     "\n",
     "fig = plt.figure()  # figsize=(4, 4)\n",
@@ -841,6 +847,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "plt.set_cmap('Accent')\n",
     "fig = plt.figure(figsize=(6, 6))\n",
     "ax = fig.add_axes((0, 0, 1, 1))\n",
@@ -945,6 +952,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "# xlim = (-0.001, 0.017) # (-0.01, 0.76)\n",
     "# fontsize=14 # labelsize=16\n",
     "plot_bar_exp(explanation, '_figures/tabular_explanation.pdf',\n",
