--- a/DAMI_2021/experiments_tabular.ipynb
+++ b/DAMI_2021/experiments_tabular.ipynb
@@ -16,6 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "! mkdir -p _figures\n",
+    "\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
