--- a/DAMI_2021/experiments_image.ipynb
+++ b/DAMI_2021/experiments_image.ipynb
@@ -28,6 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "! mkdir -p _figures\n",
+    "\n",
     "import os\n",
     "import pickle\n",
     "\n",
