Support different pickle file names

--- a/DAMI_2021/experiments_image.ipynb
+++ b/DAMI_2021/experiments_image.ipynb
@@ -62,9 +62,10 @@
     }
    ],
    "source": [
+    "i_ = -18 if 'compressed' in data_path else -7\n",
     "with open(data_path, 'rb') as f:\n",
     "    exp_data = pickle.load(f)\n",
-    "exp_data_segments = int(os.path.basename(data_path)[7:][:-7])\n",
+    "exp_data_segments = int(os.path.basename(data_path)[7:][:i_])\n",
     "print(f'Number of segments: {exp_data_segments}')"
    ]
   },
