--- a/DAMI_2021/experiments_tabular.ipynb
+++ b/DAMI_2021/experiments_tabular.ipynb
@@ -352,7 +352,7 @@
     "    data_sets[data_set]['tree_leaves'] + 1,\n",
     "    step=int(data_sets[data_set]['tree_leaves'] / 16)\n",
     "))\n",
-    "plt.xlim((2 - int(data_sets[data_set]['tree_leaves'] / 16),\n",
+    "plt.xlim((int(data_sets[data_set]['tree_leaves'] / 8) - int(data_sets[data_set]['tree_leaves'] / 16),\n",
     "          data_sets[data_set]['tree_leaves'] + int(data_sets[data_set]['tree_leaves'] / 16)))\n",
     "\n",
     "plt.legend(loc='upper right')  # 'top right'\n",
