LIMEtree FAT Forensics experiment fix

--- a/IJCAI_2023/limetree_experiments.ipynb
+++ b/IJCAI_2023/limetree_experiments.ipynb
@@ -16,7 +16,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22-Sep-04 01:41:14 fatf.utils.array.tools INFO     Using numpy's numpy.lib.recfunctions.structured_to_unstructured as fatf.utils.array.tools.structured_to_unstructured and fatf.utils.array.tools.structured_to_unstructured_row.\n"
+      "22-Sep-04 12:58:06 fatf.utils.array.tools INFO     Using numpy's numpy.lib.recfunctions.structured_to_unstructured as fatf.utils.array.tools.structured_to_unstructured and fatf.utils.array.tools.structured_to_unstructured_row.\n"
      ]
     }
    ],
@@ -83,22 +83,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22-Sep-04 01:41:14 scripts.limetree DEBUG    Image: ./img/dog_ball.jpg\n",
-      "22-Sep-04 01:41:14 scripts.limetree DEBUG    Image: ./img/dog_ball.jpg\n",
-      "22-Sep-04 01:41:14 scripts.limetree DEBUG    Segmenter in use: slic\n",
-      "22-Sep-04 01:41:14 scripts.limetree DEBUG    Segmenter in use: slic\n",
+      "22-Sep-04 12:58:07 scripts.limetree DEBUG    Image: ./img/dog_ball.jpg\n",
+      "22-Sep-04 12:58:07 scripts.limetree DEBUG    Image: ./img/dog_ball.jpg\n",
+      "22-Sep-04 12:58:07 scripts.limetree DEBUG    Segmenter in use: slic\n",
+      "22-Sep-04 12:58:07 scripts.limetree DEBUG    Segmenter in use: slic\n",
       "/Users/kacper/.pyenv/versions/3.8.13/envs/limetree/lib/python3.8/site-packages/torchvision/transforms/functional.py:150: UserWarning: The given NumPy array is not writable, and PyTorch does not support non-writable tensors. This means writing to this tensor will result in undefined behavior. You may want to copy the array to protect its data or make it writable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_numpy.cpp:178.)\n",
       "  img = torch.from_numpy(pic.transpose((2, 0, 1))).contiguous()\n",
-      "22-Sep-04 01:41:15 scripts.limetree DEBUG    Top n classes: 3\n",
-      "22-Sep-04 01:41:15 scripts.limetree DEBUG    Top n classes: 3\n",
-      "22-Sep-04 01:41:15 fatf         INFO     Seeding RNGs using the input parameter.\n",
-      "22-Sep-04 01:41:15 fatf         INFO     Seeding RNGs with 42.\n",
-      "22-Sep-04 01:41:15 scripts.limetree DEBUG    Segments number: 4\n",
-      "22-Sep-04 01:41:15 scripts.limetree DEBUG    Segments number: 4\n",
-      "22-Sep-04 01:41:15 scripts.limetree DEBUG    Sampled data shape: (16, 4)\n",
-      "22-Sep-04 01:41:15 scripts.limetree DEBUG    Sampled data shape: (16, 4)\n",
-      "22-Sep-04 01:41:17 fatf         INFO     Seeding RNGs using the input parameter.\n",
-      "22-Sep-04 01:41:17 fatf         INFO     Seeding RNGs with 42.\n"
+      "22-Sep-04 12:58:07 scripts.limetree DEBUG    Top n classes: 3\n",
+      "22-Sep-04 12:58:07 scripts.limetree DEBUG    Top n classes: 3\n",
+      "22-Sep-04 12:58:07 fatf         INFO     Seeding RNGs using the input parameter.\n",
+      "22-Sep-04 12:58:07 fatf         INFO     Seeding RNGs with 42.\n",
+      "22-Sep-04 12:58:07 scripts.limetree DEBUG    Segments number: 4\n",
+      "22-Sep-04 12:58:07 scripts.limetree DEBUG    Segments number: 4\n",
+      "22-Sep-04 12:58:07 scripts.limetree DEBUG    Sampled data shape: (16, 4)\n",
+      "22-Sep-04 12:58:07 scripts.limetree DEBUG    Sampled data shape: (16, 4)\n",
+      "22-Sep-04 12:58:09 fatf         INFO     Seeding RNGs using the input parameter.\n",
+      "22-Sep-04 12:58:09 fatf         INFO     Seeding RNGs with 42.\n"
      ]
     }
    ],
@@ -139,22 +139,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22-Sep-04 01:41:29 scripts.limetree DEBUG    Image: ./img/dog_ball.jpg\n",
-      "22-Sep-04 01:41:29 scripts.limetree DEBUG    Image: ./img/dog_ball.jpg\n",
-      "22-Sep-04 01:41:29 scripts.limetree DEBUG    Segmenter in use: slic\n",
-      "22-Sep-04 01:41:29 scripts.limetree DEBUG    Segmenter in use: slic\n",
-      "22-Sep-04 01:41:29 scripts.limetree DEBUG    Top n classes: 3\n",
-      "22-Sep-04 01:41:29 scripts.limetree DEBUG    Top n classes: 3\n",
-      "22-Sep-04 01:41:29 fatf         INFO     Seeding RNGs using the input parameter.\n",
-      "22-Sep-04 01:41:29 fatf         INFO     Seeding RNGs with 42.\n",
-      "22-Sep-04 01:41:29 scripts.limetree DEBUG    Segments number: 4\n",
-      "22-Sep-04 01:41:29 scripts.limetree DEBUG    Segments number: 4\n",
-      "22-Sep-04 01:41:29 scripts.limetree DEBUG    Sampled data shape: (16, 4)\n",
-      "22-Sep-04 01:41:29 scripts.limetree DEBUG    Sampled data shape: (16, 4)\n",
-      "22-Sep-04 01:41:31 fatf         INFO     Seeding RNGs using the input parameter.\n",
-      "22-Sep-04 01:41:31 fatf         INFO     Seeding RNGs with 42.\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Processed image: ./img/dog_ball.jpg\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Processed image: ./img/dog_ball.jpg\n"
+      "22-Sep-04 12:58:21 scripts.limetree DEBUG    Image: ./img/dog_ball.jpg\n",
+      "22-Sep-04 12:58:21 scripts.limetree DEBUG    Image: ./img/dog_ball.jpg\n",
+      "22-Sep-04 12:58:21 scripts.limetree DEBUG    Segmenter in use: slic\n",
+      "22-Sep-04 12:58:21 scripts.limetree DEBUG    Segmenter in use: slic\n",
+      "22-Sep-04 12:58:21 scripts.limetree DEBUG    Top n classes: 3\n",
+      "22-Sep-04 12:58:21 scripts.limetree DEBUG    Top n classes: 3\n",
+      "22-Sep-04 12:58:21 fatf         INFO     Seeding RNGs using the input parameter.\n",
+      "22-Sep-04 12:58:21 fatf         INFO     Seeding RNGs with 42.\n",
+      "22-Sep-04 12:58:21 scripts.limetree DEBUG    Segments number: 4\n",
+      "22-Sep-04 12:58:21 scripts.limetree DEBUG    Segments number: 4\n",
+      "22-Sep-04 12:58:21 scripts.limetree DEBUG    Sampled data shape: (16, 4)\n",
+      "22-Sep-04 12:58:21 scripts.limetree DEBUG    Sampled data shape: (16, 4)\n",
+      "22-Sep-04 12:58:23 fatf         INFO     Seeding RNGs using the input parameter.\n",
+      "22-Sep-04 12:58:23 fatf         INFO     Seeding RNGs with 42.\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Processed image: ./img/dog_ball.jpg\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Processed image: ./img/dog_ball.jpg\n"
      ]
     }
    ],
@@ -209,57 +209,74 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of processed images: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Number of processed images: {len(collector.keys())}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
-      "22-Sep-04 01:41:44 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n"
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n",
+      "22-Sep-04 12:58:36 scripts.limetree DEBUG    Reshaping for LIMEtree loss (got 1D).\n"
      ]
     }
    ],
@@ -269,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
