Ignore plots in tests

--- a/HCML_2019/bLIMEy.ipynb
+++ b/HCML_2019/bLIMEy.ipynb
@@ -330,6 +330,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "plt.figure(figsize=(5, 5))\n",
     "\n",
     "plt.contourf(grid_xx, grid_yy, grid_prediction,\n",
@@ -477,6 +478,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "for i, name in enumerate(samplers_names):\n",
     "    print('Used sampler: {}.'.format(name))\n",
     "    \n",
@@ -668,6 +670,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "plt.figure(figsize=(6, 5))\n",
     "\n",
     "cs = plt.contourf(grid_xx, grid_yy, grid_prediction,\n",
@@ -786,6 +789,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "levels = np.linspace(-0.5, 1.5, 10)\n",
     "\n",
     "ridge_prediction = moons_ridge.predict(\n",
@@ -861,6 +865,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "plt.figure(figsize=(15, 10))\n",
     "moons_tree_text = sklearn.tree.plot_tree(moons_tree)"
    ]
@@ -884,6 +889,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "tree_prediction = moons_tree.predict(\n",
     "    np.c_[grid_xx.ravel(), grid_yy.ravel()])\n",
     "tree_prediction = tree_prediction.reshape(\n",
