Notebook test fix

--- a/ECML-PKDD_2023/limetree_experiments.ipynb
+++ b/ECML-PKDD_2023/limetree_experiments.ipynb
@@ -72,6 +72,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "22-Sep-06 10:15:13 scripts.limetree DEBUG    Is RANDOM sample used for surrogate training: False\n",
+      "22-Sep-06 10:15:13 scripts.limetree DEBUG    Is RANDOM sample used for surrogate training: False\n",
       "22-Sep-06 10:15:13 scripts.limetree DEBUG    Image: ./img/dog_ball.jpg\n",
       "22-Sep-06 10:15:13 scripts.limetree DEBUG    Image: ./img/dog_ball.jpg\n",
       "22-Sep-06 10:15:13 scripts.limetree DEBUG    Segmenter in use: slic\n",
@@ -128,6 +130,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "22-Sep-06 10:15:47 scripts.limetree DEBUG    Is RANDOM sample used for surrogate training: False\n",
+      "22-Sep-06 10:15:47 scripts.limetree DEBUG    Is RANDOM sample used for surrogate training: False\n",
       "22-Sep-06 10:15:47 scripts.limetree DEBUG    Image: ./img/dog_ball.jpg\n",
       "22-Sep-06 10:15:47 scripts.limetree DEBUG    Image: ./img/dog_ball.jpg\n",
       "22-Sep-06 10:15:47 scripts.limetree DEBUG    Segmenter in use: slic\n",
