--- a/ECML-PKDD_2023/limetree_experiments.ipynb
+++ b/ECML-PKDD_2023/limetree_experiments.ipynb
@@ -144,8 +144,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# source = 'processed_limetree_1835.pickle'\n",
-    "source = 'processed_limetree_cifar10_9714.pickle'\n",
+    "#source = 'processed_limetree_1835.pickle'\n",
+    "#source = 'processed_limetree_cifar10_9714.pickle'\n",
+    "source = 'processed_limetree_cifar100_9665.pickle'\n",
     "with open(source, 'rb') as r_file:\n",
     "    collector = pickle.load(r_file)"
    ]
