CIFAR CPU and GPU experiments

--- a/ECML-PKDD_2023/limetree_experiments.ipynb
+++ b/ECML-PKDD_2023/limetree_experiments.ipynb
@@ -157,7 +157,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lime_scores_summary, limet_scores_summary = collector"
+    "if isinstance(collector, list):\n",
+    "    collector = {i:j for i, j in enumerate(collector)}"
    ]
   },
   {
