CIFAR update fro DAMI 2024

--- a/DAMI_2024/exploration_image.ipynb
+++ b/DAMI_2024/exploration_image.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "_base_path = ('https://raw.githubusercontent.com/fat-forensics/resources/'\n",
     "              'master/surrogates_overview/scripts/{}')\n",
-    "_scripts = ['__init__.py', 'image_classifier.py', 'imagenet_label_map.py']\n",
+    "_scripts = ['__init__.py', 'image_classifier.py', 'imagenet_label_map.py', 'cifar_label_map.py']\n",
     "! mkdir -p scripts\n",
     "for i in _scripts:\n",
     "    i_ = _base_path.format(i)\n",
