Log message fix

--- a/ECML-PKDD_2023/limetree_experiments.ipynb
+++ b/ECML-PKDD_2023/limetree_experiments.ipynb
@@ -236,8 +236,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22-Sep-06 10:16:13 scripts.limetree DEBUG    Number of processed images: 1\n",
-      "22-Sep-06 10:16:13 scripts.limetree DEBUG    Number of processed images: 1\n"
+      "22-Sep-06 10:16:13 scripts.limetree DEBUG    Number of processed data points: 1\n",
+      "22-Sep-06 10:16:13 scripts.limetree DEBUG    Number of processed data points: 1\n"
      ]
     }
    ],
