--- a/ECML-PKDD_2023/limetree_experiments_tabular.ipynb
+++ b/ECML-PKDD_2023/limetree_experiments_tabular.ipynb
@@ -324,12 +324,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of processed images: 5\n"
+      "Number of processed instances: 5\n"
      ]
     }
    ],
    "source": [
-    "print(f'Number of processed images: {len(collector.keys())}')"
+    "print(f'Number of processed instances: {len(collector.keys())}')"
    ]
   },
   {
@@ -341,8 +341,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24-Apr-28 22:32:15 scripts.limetree DEBUG    Number of processed images: 5\n",
-      "24-Apr-28 22:32:15 scripts.limetree DEBUG    Number of processed images: 5\n"
+      "24-Apr-28 22:32:15 scripts.limetree DEBUG    Number of processed data points: 5\n",
+      "24-Apr-28 22:32:15 scripts.limetree DEBUG    Number of processed data points: 5\n"
      ]
     }
    ],
