LIMEtree extra CIFAR & tabular experiments (#7)
* CIFAR-10
* CIFAR-100
* CIFAR CPU and GPU implementation
* Tabular experiments
* Fixed loss calculation
* Execution time measure (LIMEtree - LIME)

--- a/ECML-PKDD_2023/limetree_experiments.ipynb
+++ b/ECML-PKDD_2023/limetree_experiments.ipynb
@@ -31,7 +31,7 @@
     "    logger,\n",
     "    explain_image,\n",
     "    compute_loss, process_loss, summarise_loss_lime, summarise_loss_limet,\n",
-    "    plot_loss_summary)"
+    "    plot_loss_summary, tabulate_loss_summary)"
    ]
   },
   {
@@ -40,6 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "! mkdir -p _figures\n",
+    "\n",
     "# logging.basicConfig(level=logging.DEBUG)\n",
     "logger.setLevel(logging.DEBUG)\n",
     "\n",
@@ -174,7 +176,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('limet_sample.pickle', 'wb') as w_file:\n",
+    "destination = 'limet_sample.pickle'\n",
+    "with open(destination, 'wb') as w_file:\n",
     "    pickle.dump(collector, w_file,\n",
     "                protocol=pickle.HIGHEST_PROTOCOL)\n"
    ]
@@ -192,13 +195,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('limet_sample.pickle', 'rb') as r_file:\n",
+    "source = 'limet_sample.pickle'\n",
+    "with open(source, 'rb') as r_file:\n",
     "    collector = pickle.load(r_file)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if isinstance(collector, list):\n",
+    "    collector = {i:j for i, j in enumerate(collector)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -215,15 +229,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22-Sep-06 10:16:13 scripts.limetree DEBUG    Number of processed images: 1\n",
-      "22-Sep-06 10:16:13 scripts.limetree DEBUG    Number of processed images: 1\n"
+      "22-Sep-06 10:16:13 scripts.limetree DEBUG    Number of processed data points: 1\n",
+      "22-Sep-06 10:16:13 scripts.limetree DEBUG    Number of processed data points: 1\n"
      ]
     }
    ],
@@ -233,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -277,6 +291,39 @@
     "plot_loss_summary(lime_scores_summary, limet_scores_summary,\n",
     "                  1, use_limet_loss=False,\n",
     "                  use_weighted=True, use_random=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\(0.06\\pm0.00\\)\n",
+      "\\(0.06\\pm0.00\\)\n",
+      "\\(0.11\\pm0.00\\)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'lime': (0.0582666267847181, 0.0),\n",
+       " 'limet': (0.05659078301687676, 0.0),\n",
+       " 'limetf': (0.11188957651704319, 0.0)}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tabulate_loss_summary(lime_scores_summary, limet_scores_summary, 1,\n",
+    "                      0.33, scale_factor=1, latex=True,\n",
+    "                      use_limet_loss=False, use_weighted=True, use_random=False)"
    ]
   },
   {
